# nanoarrow2parquet

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: ci.yml
bench/: README.md  bench_arrow.cpp  bench_common.hpp  bench_n2p.cpp  bench_n2p_soa.cpp  render_results.py  run_bench.py
examples/: arrow2parquet_demo.cpp  pcapng2parquet.cpp  pcapng2parquet.md
examples/pcapng2parquet/: README.md
examples/pcapng2parquet/include/: packet_row.hpp  parquet_pdu_table_writer.hpp  streaming_reader.hpp
examples/pcapng2parquet/src/: pcapng2parquet_main.cpp
examples/pcapng2parquet/tests/: check_pcapng2parquet.py
include/nanoarrow2parquet/: nanoarrow2parquet.h  soa.hpp
scripts/: amalgamate.py
single_include/: nanoarrow2parquet.h
src/: compress.hpp  parquet_types.hpp  rle_bitpack.hpp  thrift_compact.hpp  writer.cpp
tests/: check_mixed_types.py  check_nullable.py  check_soa.py  check_soa_bool.py  check_soa_nullable.py  check_soa_strings.py  check_soa_struct.py  check_strings.py  check_struct.py  smoke_pyarrow_roundtrip.sh  test_mixed_types.cpp  test_nullable.cpp  test_roundtrip.cpp  test_single_header.cpp  test_single_header_decls.cpp  test_soa.cpp  test_soa_bool.cpp  test_soa_nullable.cpp  test_soa_strings.cpp  test_soa_struct.cpp  test_strings.cpp  test_struct.cpp
